// Copyright (c) YugabyteDB, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
// in compliance with the License. You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License
// is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
// or implied. See the License for the specific language governing permissions and limitations
// under the License.

syntax = "proto3";

package yb.xcluster;

option java_package = "org.yb.xcluster";

message ProducerRegistryPB {
  // Map from producer cdc stream ids to whether replication is paused on that stream.
  // The paused_producer_stream_ids map is currently being used as a set so the second
  // value will always be set to true.
  map<string, bool> paused_producer_stream_ids = 1;
}
